--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/xwarlos/20210601#readme",
   "dependencies": {
     "ganache-cli": "^6.12.2",
+    "mocha": "^8.4.0",
     "solc": "^0.8.4",
     "web3": "^1.3.6"
   }
