--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "20210601",
   "version": "1.0.0",
-  "description": "",
   "main": "compile.js",
   "scripts": {
     "test": "mocha"
@@ -23,5 +22,10 @@
     "solc": "^0.8.4",
     "truffle-hdwallet-provider": "^1.0.17",
     "web3": "^1.3.6"
-  }
+  },
+  "directories": {
+    "test": "test"
+  },
+  "devDependencies": {},
+  "description": ""
 }
